completed a simple backend (JWT auth, DTO mapping, CRUD, and security setup) for a simple taskboard project, next commits will be focused on creating the frontend